--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -16,51 +16,51 @@ Start by identifying the purpose of the visualization and choose a chart type ap
 <Row className="overview-card-group">
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Bar chart"
-    href="/data-visualization/basic-charts#bar-chart"
+    title="Simple bar (vertical)"
+    href="/data-visualization/basic-charts#simple-bar-(discrete)"
     >
 
-![](images/bar.svg)
+![Simple bar (vertical)](images/bar.svg)
 
 </OverviewCard>
 </Column>
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Grouped bar"
-    href="/data-visualization/basic-charts#grouped-bar-chart"
+    title="Grouped bar (vertical)"
+    href="/data-visualization/basic-charts#grouped-bar-(discrete)"
     >
 
-![](images/bargrouped.svg)
+![Grouped bar (vertical)](images/bargrouped.svg)
 
 </OverviewCard>
 </Column>
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Bubble chart"
-    href="/data-visualization/basic-charts#bubble-chart"
+    title="Bubble"
+    href="/data-visualization/basic-charts#bubble"
     >
 
-![](images/bubble.svg)
+![Bubble](images/bubble.svg)
 
 </OverviewCard>
 </Column>
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Radar chart"
-    disabled
+    title="Radar"
+	href="/data-visualization/basic-charts#radar"
     >
 
-![](images/radar.svg)
+![Radar](images/radar.svg)
 
 </OverviewCard>
 </Column>
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Horizontal bar"
-    href="/data-visualization/basic-charts#horizontal-bar"
+    title="Simple bar (horizontal)"
+    href="/data-visualization/basic-charts#simple-horizontal-bar-(discrete)"
     >
 
-![](images/barhoriz.svg)
+![Simple bar (horizontal)](images/barhoriz.svg)
 
 </OverviewCard>
 </Column>
@@ -71,42 +71,41 @@ Start by identifying the purpose of the visualization and choose a chart type ap
 <Row className="overview-card-group">
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Line chart"
-    href="/data-visualization/basic-charts#line-chart"
+    title="Line"
+    href="/data-visualization/basic-charts#line"
     >
 
-![](images/line.svg)
+![Line](images/line.svg)
 
 </OverviewCard>
 </Column>
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Area chart"
-    href="/data-visualization/basic-charts#area-chart"
+    title="Area"
+    href="/data-visualization/basic-charts#area"
     >
 
-![](images/area.svg)
+![Area](images/area.svg)
 
 </OverviewCard>
 </Column>
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Histogram"
-    href="/data-visualization/basic-charts#bar-chart"
-    tag="Design only"
+	disabled
     >
 
-![](images/histogram.svg)
+![Histogram](images/histogram.svg)
 
 </OverviewCard>
 </Column>
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Stream chart"
+    title="Stream"
     disabled
     >
 
-![](images/stream.svg)
+![Stream](images/stream.svg)
 
 </OverviewCard>
 </Column>
@@ -117,21 +116,31 @@ Start by identifying the purpose of the visualization and choose a chart type ap
 <Row className="overview-card-group">
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Donut / pie"
-    href="/data-visualization/basic-charts#pie-and-donut-chart"
+    title="Donut"
+    href="/data-visualization/basic-charts#donut"
     >
 
-![](images/donut.svg)
+![Donut](images/donut.svg)
 
 </OverviewCard>
 </Column>
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
-    title="Stacked bar"
-    href="/data-visualization/basic-charts/#stacked-bar"
+    title="Pie"
+    href="/data-visualization/basic-charts#pie"
     >
 
-![](images/barstack.svg)
+![Pie](images/donut.svg)
+
+</OverviewCard>
+</Column>
+<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
+ <OverviewCard
+    title="Stacked bar (vertical)"
+    href="/data-visualization/basic-charts/#stacked-bar-(discrete)"
+    >
+
+![Stacked bar (vertical)](images/barstack.svg)
 
 </OverviewCard>
 </Column>
@@ -142,17 +151,7 @@ Start by identifying the purpose of the visualization and choose a chart type ap
     tag="Design only"
     >
 
-![](images/areastack.svg)
-
-</OverviewCard>
-</Column>
-<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm>
- <OverviewCard
-    title="Tree map"
-    disabled
-    >
-
-![](images/treemap.svg)
+![Stacked area](images/areastack.svg)
 
 </OverviewCard>
 </Column>
@@ -163,7 +162,17 @@ Start by identifying the purpose of the visualization and choose a chart type ap
    tag="Design only"
    >
 
-![](images/gauge.svg)
+![Meter / gauge](images/gauge.svg)
+
+</OverviewCard>
+</Column>
+<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm>
+ <OverviewCard
+    title="Tree map"
+    disabled
+    >
+
+![Tree map](images/treemap.svg)
 
 </OverviewCard>
 </Column>
@@ -174,11 +183,11 @@ Start by identifying the purpose of the visualization and choose a chart type ap
 <Row className="overview-card-group">
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm>
  <OverviewCard
-    title="Scatter plot"
-    href="/data-visualization/basic-charts#scatter-plot"
+    title="Scatter"
+    href="/data-visualization/basic-charts#scatter"
     >
 
-![](images/scatter.svg)
+![Scatter](images/scatter.svg)
 
 </OverviewCard>
 </Column>
@@ -188,7 +197,7 @@ Start by identifying the purpose of the visualization and choose a chart type ap
     disabled
     >
 
-![](images/heatmap.svg)
+![Heat map](images/heatmap.svg)
 
 </OverviewCard>
 </Column>
@@ -198,7 +207,7 @@ Start by identifying the purpose of the visualization and choose a chart type ap
     disabled
     >
 
-![](images/parallel.svg)
+![Parallel coordinates](images/parallel.svg)
 
 </OverviewCard>
 </Column>
@@ -214,7 +223,7 @@ Start by identifying the purpose of the visualization and choose a chart type ap
     tag="Design only"
     >
 
-![](images/alluvial.svg)
+![Alluvial diagram](images/alluvial.svg)
 
 </OverviewCard>
 </Column>
@@ -225,7 +234,7 @@ Start by identifying the purpose of the visualization and choose a chart type ap
     tag="Design only"
     >
 
-![](images/treediagram.svg)
+![Tree diagram](images/treediagram.svg)
 
 </OverviewCard>
 </Column>
@@ -241,7 +250,7 @@ Start by identifying the purpose of the visualization and choose a chart type ap
     tag="Design only"
     >
 
-![](images/geo-choropleth.svg)
+![Choropleth map](images/geo-choropleth.svg)
 
 </OverviewCard>
 </Column>
@@ -252,7 +261,7 @@ Start by identifying the purpose of the visualization and choose a chart type ap
     tag="Design only"
     >
 
-![](images/geo-proportion.svg)
+![Proportional symbol](images/geo-proportion.svg)
 
 </OverviewCard>
 </Column>
@@ -263,7 +272,7 @@ Start by identifying the purpose of the visualization and choose a chart type ap
     tag="Design only"
     >
 
-![](images/geo-connection.svg)
+![Connecting lines](images/geo-connection.svg)
 
 </OverviewCard>
 </Column>
