fix: put comma inside quotes

--- a/src/pages/guidelines/motion/choreography.mdx
+++ b/src/pages/guidelines/motion/choreography.mdx
@@ -86,7 +86,7 @@ In the example below, both expanding a row of a data table and opening a dropdow
 Pay attention to the spatial relationships between elements and screens, and information hierarchy. Visually similar elements may need the different motions to clarify their respective spatial locations.
 
 <DoDontRow>
-<DoDont colLg={12} colMd={8} caption="When the new content panel is on a higher layer, motion is “sliding”, moving content within with the panel.  Also always dim the content below when new layer is introduced above.">
+<DoDont colLg={12} colMd={8} caption="When the new content panel is on a higher layer, motion is “sliding,” moving content within with the panel.  Also always dim the content below when new layer is introduced above.">
 
 <Video vimeoId="310581999" />
 
@@ -94,7 +94,7 @@ Pay attention to the spatial relationships between elements and screens, and inf
 </DoDontRow>
 
 <DoDontRow>
-<DoDont colLg={12} colMd={8} caption="When the new content panel is on the same layer, motion is “pushing”, revealing content within with a mask.">
+<DoDont colLg={12} colMd={8} caption="When the new content panel is on the same layer, motion is “pushing,” revealing content within with a mask.">
 
 <Video vimeoId="310582064" />
 
