Updates and new image

--- a/src/pages/community/patterns/export-pattern/index.mdx
+++ b/src/pages/community/patterns/export-pattern/index.mdx
@@ -9,17 +9,13 @@ description: Exporting a resource saves data in a different format, external to 
 
 <PageDescription>
 
-When exporting something you have the ability to change the format of the object or resource you are exporting out external to the system. Downloading transfers a resource from a remote system to a local system without changing its format.
+When **exporting** something you have the ability to change the format of the object or resource you are exporting out external to the system.
+
+**Downloading** transfers a resource from a remote system to a local system without changing its format.
+
+Most of this pattern is applicable to both exporting and downloading.
 
 </PageDescription>
-
-<AnchorLinks>
-
-<AnchorLink>Intuitive default name</AnchorLink>
-<AnchorLink>Editable name</AnchorLink>
-<AnchorLink small>Optional extras</AnchorLink>
-
-</AnchorLinks>
 
 ![Example of an export modal in context](images/0.png)
 
@@ -28,6 +24,14 @@ When exporting something you have the ability to change the format of the object
 ![Example of a download modal in context](images/download0.png)
 
 <Caption>Example of a download modal in the context of a product</Caption>
+
+<AnchorLinks>
+
+<AnchorLink>Intuitive default name</AnchorLink>
+<AnchorLink>Editable name</AnchorLink>
+<AnchorLink small>Optional extras</AnchorLink>
+
+</AnchorLinks>
 
 ## Intuitive default name
 
@@ -83,6 +87,19 @@ When specifying the download location of a resource, clicking the primary “dow
 <Column colLg={8}>
 
 ![Example of specifying an export location](images/newimage2.png)
+
+</Column>
+</Row>
+
+### Choosing export format
+
+When a file can be exported in 2-5 different formats, these can be presented in a radio-button selection.
+Where possible, provide guidance about which format a user might want to choose, and pre-select a sensible default.
+
+<Row>
+<Column colLg={8}>
+
+![Example of specifying an export location](images/Format_Selection.png)
 
 </Column>
 </Row>
