--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -112,7 +112,7 @@ Start by identifying the purpose of the visualization and then choose the approp
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Stream"
-    disabled
+	disabled
     >
 
 ![Stream](images/stream.svg)
@@ -159,9 +159,8 @@ Start by identifying the purpose of the visualization and then choose the approp
  <OverviewCard
     title="Stacked area"
     href="/data-visualization/basic-charts/#stacked-area-chart"
-    tag="Design only"
     title="Stacked bar (vertical)"
-    href="/data-visualization/basic-charts/#stacked-bar-(discrete)"
+    href="/data-visualization/basic-charts/#bar-(vertical)"
     >
 
 ![Stacked bar (vertical)](images/barstack.svg)
@@ -193,7 +192,8 @@ Start by identifying the purpose of the visualization and then choose the approp
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm>
  <OverviewCard
     title="Tree map"
-    disabled
+    href="/data-visualization/advanced-charts#tree-maps"
+    tag="Design only"
     >
 
 ![Tree map](images/treemap.svg)
@@ -218,7 +218,8 @@ Start by identifying the purpose of the visualization and then choose the approp
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Heat map"
-    disabled
+    href="/data-visualization/advanced-charts#heat-maps"	       
+    tag="Design only"
     >
 
 ![Heat map](images/heatmap.svg)
@@ -228,7 +229,8 @@ Start by identifying the purpose of the visualization and then choose the approp
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Parallel coordinates"
-    disabled
+    href="/data-visualization/advanced-charts#parallel-coordinates"	       
+    tag="Design only"
     >
 
 ![Parallel coordinates](images/parallel.svg)
