--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -308,7 +308,7 @@ Fluid components like button never exist in isolation. As you can see in the exa
 
 #### Fluid button border
 
-Many product designers have approached us looking for more guidance around borders between all fluid buttons. Although we haven’t made [this update](https://github.com/carbon-design-system/carbon/issues/5638) yet, we plan to add a 1px border between all fluid buttons that calls the \$ui-03 token for subtle borders. This feature will add a 3:1 distinction between the two interactive UI elements. The border is a recommended feature to improve accessibility in data visualizations and the same logic should apply here.
+Many product designers have approached us looking for more guidance around borders between all fluid buttons. Although we haven’t made [this update](https://github.com/carbon-design-system/carbon/issues/5638) yet, we plan to add a 1px border between all fluid buttons that calls the `$ui-03` token for subtle borders. This feature will add a 3:1 distinction between the two interactive UI elements. The border is a recommended feature to improve accessibility in data visualizations and the same logic should apply here.
 
 <Row>
 <Column colLg={8}>
