--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -52,7 +52,7 @@ Do not use buttons as navigational elements. Instead, use [links](https://www.ca
 | _Secondary_ | For secondary actions on each page; these can only be used  in conjunction with a primary button.                                                             |
 | _Tertiary_  | For less prominent actions; tertiary buttons can be used in isolation  or paired with a primary button when there are multiple calls to action.               |
 | _Danger_    | For actions that could have destructive effects on the user’s data  (delete, remove, etc.).                                                                   |
-| _Ghost_     | For the least pronounced actions; often used in conjunction with a primary button.                                                                             |
+| _Ghost_     | For the least pronounced actions; often used in conjunction with a primary button.                                                                            |
 
 import { Add16 } from "@carbon/icons-react";
 
@@ -204,12 +204,12 @@ Buttons are named according to their size and usage in the Carbon Sketch kit and
 </Column>
 </Row>
 
-| Name         | Height (px/rem) | Use Case                                                                           |
-| ------------ | --------------- | ---------------------------------------------------------------------------------- |
-| _Full bleed_ | 64/4            | Use when buttons bleed to the edge of a component, like in side panels and modals. |  |
-| _Default_    | 48/3            | Use as primary page actions and other standalone actions.                          |
-| _Field_      | 40/2.5          | Use when buttons are paired with input fields.                                     |
-| _Small_      | 32/2            | Use when there is not enough vertical space for the default or field-sized button. |
+| Name         | Height (px/rem) | Use Case                                                                                                                                                                                                                                                                           |
+| ------------ | --------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| _Full bleed_ | 64/4            | Use when buttons bleed to the edge of a larger component, like side panels or modals. _Note: This variant is not offered in the kit because it does not have a coded counterpart. Carbon only offers this button in the context of the [modal component](components/modal/usage)._ |
+| _Default_    | 48/3            | Use as primary page actions and other standalone actions.                                                                                                                                                                                                                          |
+| _Field_      | 40/2.5          | Use when buttons are paired with input fields.                                                                                                                                                                                                                                     |
+| _Small_      | 32/2            | Use when there is not enough vertical space for the default or field-sized button.                                                                                                                                                                                                 |
 
 ### Emphasis
 
@@ -269,11 +269,11 @@ In some cases a button group—or even a single button in the case of a side pan
 </Column>
 </Row>
 
-| Alignment         | Use case                                                                                                           |
-| ----------------- | ------------------------------------------------------------------------------------------------------------------ |
-| _Left-justified_  | Banner call to actions, in-page forms, and nested buttons in components like tiles                                  |
-| _Right-justified_ | Inline notifications, inline field buttons and  data tables, progressive forms, wizards, and single-button dialogs |
-| _Full span_       | Dialogs, side panels, and small tiles (optional treatment)                                                          |
+| Alignment         | Use case                                                                                                                                                        |
+| ----------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| _Left-justified_  | Banner call to actions, in-page forms, and nested buttons in components like tiles                                                                              |
+| _Right-justified_ | Inline notifications, inline field buttons and  data tables, progressive forms, wizards, and single-button dialogs                                              |
+| _Full-span_       | Dialogs, side panels, and small tiles; currently Carbon does not offer a way to implement full-span buttons in code, without an override, they max out at 320px |
 
 #### Fluid versus fixed buttons
 
@@ -366,7 +366,7 @@ As mentioned in the [Emphasis section](#Emphasis), you don’t necessarily need 
 
 #### Button groups and the grid
 
-Ideally, when using groups of related buttons (not including ghost buttons), they should all be the same width. This can be achieved in one of two ways, both of which are acceptable. The first approach involves using the [narrow grid mode](/guidelines/2x-grid/code). In this situation each button would be set individually on the column grid.
+Ideally, when using groups of related buttons (not including ghost buttons), they should all be the same width. This can be achieved in one of two ways, both of which are acceptable. The first approach involves using the [narrow grid mode](/guidelines/2x-grid/code). In this situation each button would be set individually on the column grid. _Note: Carbon developers are working on the narrow grid mode, currently left-hanging buttons can only be achieved with an override._
 
 <Row>
 <Column colLg={8}>
@@ -428,7 +428,7 @@ When using multiple buttons, the position of the primary button adheres to the [
 
 Typical landing pages for product have buttons side by side. However vertical button groups are also common in products, to save real estate in narrow columns and occasionally side panels. In these instances, the primary button is always on top and the secondary or tertiary button is below.
 
-Generally, when designers stack buttons, they tend to use the fixed buttons. However, stacked fluid buttons are also an option in desktop side panels with especially long calls to action. 
+Generally, when designers stack buttons, they tend to use the fixed buttons. However, stacked fluid buttons are also an option in desktop side panels with especially long calls to action. _Note: experimenting with stacked fluid buttons would require an override to the existing code._
 
 <Row>
 <Column colLg={12}>
