--- a/src/pages/community/patterns/index.mdx
+++ b/src/pages/community/patterns/index.mdx
@@ -13,14 +13,14 @@ _Some of this content is accessible to IBMers only._
 
 <br />
 
-| Community patterns                                                                                                            |                                                                                                                                                                                           |
-| ----------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [Chatbots](/community/patterns/chatbot/overview)                                                                              | How to design chatbots for users using natural language.                                                                                                                                  |
-| [Create flows](/community/patterns/create-flows)                                                                              | How to generate a new resource; compare adding.                                                                                                                                           |
-| [Edit](/community/patterns/edit-pattern)                                                                                      | How to make changes to an existing resource.                                                                                                                                              |
-| [Export](/community/patterns/export-pattern)                                                                                  | How to change the format of the object or resources as you are exporting externally from the system.                                                                                      |
-| [Generate an API key](/community/patterns/generate-an-api-key)                                                                | Helps ensure users know what the key is for, the security implications, and the final destination.                                                                                        |
-| [Import](/community/patterns/import-pattern)                                                                                  | Transfers data or objects from an external source into a system.                                                                                                                          |
-| [In-app learning](https://pages.github.ibm.com/watson-health/docs/guidelines/content-design/using-the-adoption-patterns.html) | _Accessible to IBMers only._ A set of patterns to help users understand key features. Includes the welcome screen, getting started, in-context help and guidance, and what's new/updates. |
-| [Order summary](https://pages.github.ibm.com/CDAI-design/CDAI-design-website/patterns/order-summary/usage)                    | _Accessible to IBMers only._ A summary of a platform's functionality, status, or individual service.                                                                                      |
-| [Remove](/community/patterns/remove-pattern)                                                                                  | An action that moves information from one location to another. Compare deletion.                                                                                                          |
+| Community patterns                                                                                                                     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
+| -------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [Chatbots](/community/patterns/chatbot/overview)                                                                                       | How to design chatbots for users using natural language.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
+| [Content: in-app learning](https://pages.github.ibm.com/watson-health/docs/guidelines/content-design/using-the-adoption-patterns.html) | _Accessible to IBMers only._ A set of patterns to help users understand key features. Includes guidance for creating the following: [welcome screens](https://pages.github.ibm.com/Watson-Health/components/welcome-screen/overview.html), [getting started](https://pages.github.ibm.com/Watson-Health/components/getting-started/overview.html), [in-context help and guidance](https://pages.github.ibm.com/Watson-Health/components/in-context-help/overview.html), [global help and guidance](https://pages.github.ibm.com/Watson-Health/components/global-help/overview.html), and [what's new/updates](https://pages.github.ibm.com/Watson-Health/components/updates/overview.html). |
+| [Create flows](/community/patterns/create-flows)                                                                                       | How to generate a new resource; compare adding.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
+| [Edit](/community/patterns/edit-pattern)                                                                                               | How to make changes to an existing resource.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
+| [Export](/community/patterns/export-pattern)                                                                                           | How to change the format of the object or resources as you are exporting externally from the system.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+| [Generate an API key](/community/patterns/generate-an-api-key)                                                                         | Helps ensure users know what the key is for, the security implications, and the final destination.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+| [Import](/community/patterns/import-pattern)                                                                                           | Transfers data or objects from an external source into a system.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+| [Order summary](https://pages.github.ibm.com/CDAI-design/CDAI-design-website/patterns/order-summary/usage)                             | _Accessible to IBMers only._ A summary of a platform's functionality, status, or individual service.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+| [Remove](/community/patterns/remove-pattern)                                                                                           | An action that moves information from one location to another. Compare deletion.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
