--- a/src/pages/guidelines/2x-grid/overview.mdx
+++ b/src/pages/guidelines/2x-grid/overview.mdx
@@ -1,7 +1,7 @@
 ---
 title: 2x Grid
 description: The grid is the framework for all the visual elements and typography at IBM. It’s fundamental to everything we design.
-tabs: ["Overview", "Code"]
+tabs: ["Overview", "Implementation"]
 ---
 
 <PageDescription>
