--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -10,6 +10,12 @@ Buttons are used to initialize an action. Button labels express what action will
 
 </PageDescription>
 
+<InlineNotification>
+
+**Note:** Some of the examples below involving full-span and hanging buttons cannot be implemented without overriding the existing button component.
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
