--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -245,9 +245,9 @@ Although secondary buttons have less visual prominence because they are less sat
 ![Do use high-emphasis and medium-emphasis buttons in a button group.](images/button_usage_8_test.png)
 
   </DoDont>
-  <DoDont type="dont" caption="Do not center text in a button, even if the button is wide.">
+  <DoDont type="dont" caption="Do not use two high-emphasis buttons in a button group.">
 
-![Do not center text in a button, even if the button is wide.](images/button_usage_9_test.png)
+![Do not use two high-emphasis buttons in a button group.](images/button_usage_9_test.png)
 
   </DoDont>
 </DoDontRow>
