--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -12,7 +12,7 @@ Buttons are used to initialize an action. Button labels express what action will
 
 <InlineNotification>
 
-**Note:** Some of the examples below involving full-span and hanging buttons cannot be implemented without overriding the existing button component.
+**Note:** Some of the examples show full-span and hanging buttons which require overrides to the existing button component. The guidance reflects recommendations for best practices, but in these cases the complete coded solutions are not yet provided by Carbon.
 
 </InlineNotification>
 
@@ -59,6 +59,8 @@ Do not use buttons as navigational elements. Instead, use [links](https://www.ca
 | _Tertiary_  | For less prominent actions; tertiary buttons can be used in isolation  or paired with a primary button when there are multiple calls to action.               |
 | _Danger_    | For actions that could have destructive effects on the user’s data  (delete, remove, etc.).                                                                   |
 | _Ghost_     | For the least pronounced actions; often used in conjunction with a primary button.                                                                            |
+
+## Live demo
 
 import { Add16 } from "@carbon/icons-react";
 
