--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -10,12 +10,6 @@ Buttons are used to initialize an action. Button labels express what action will
 
 </PageDescription>
 
-<InlineNotification>
-
-**Note:** Some of the examples show full-span and hanging buttons which require overrides to the existing button component. The guidance reflects recommendations for best practices, but in these cases the complete coded solutions are not yet provided by Carbon.
-
-</InlineNotification>
-
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
@@ -33,6 +27,12 @@ Buttons are used to initialize an action. Button labels express what action will
 ## Overview
 
 Buttons are clickable elements that are used to trigger actions. They communicate calls to action to the user and allow users to interact with pages in a variety of ways. Button labels express what action will occur when the user interacts with it.
+
+<InlineNotification>
+
+**Note:** Some of the examples we cover here show fluid (full-span) and hanging buttons which require overrides to the existing button component. The guidance reflects recommendations for best practices, but in these cases the complete coded solutions are not yet provided by Carbon.
+
+</InlineNotification>
 
 #### When to use
 
