--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -30,7 +30,7 @@ Buttons are clickable elements that are used to trigger actions. They communicat
 
 <InlineNotification>
 
-**Note:** Some of the examples we cover here show fluid (full-span) and hanging buttons which require overrides to the existing button component. The guidance reflects recommendations for best practices, but in these cases the complete coded solutions are not yet provided by Carbon.
+**Note:** Some of the examples we discuss here include fluid (full-span) and hanging buttons which require overrides to the existing button component. The guidance reflects recommendations for best practices, but in these cases the complete coded solutions are not yet provided by Carbon.
 
 </InlineNotification>
 
