change hyphen to underscore

--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -497,7 +497,7 @@ A search field can be triggered through an icon button in the data table toolbar
 <Row>
 <Column colLg={12}>
 
-![data table search](images/datatable-search.gif)
+![data table search](images/datatable_search.gif)
 
 </Column>
 </Row>
