it's vs its grammar fix

--- a/src/pages/tutorial/react/step-1.mdx
+++ b/src/pages/tutorial/react/step-1.mdx
@@ -288,7 +288,7 @@ export default TutorialHeader;
 
 <InlineNotification>
 
-**Note:** It's important that the `TutorialHeader` returns the Carbon `Header` as it's containing element, as we'll later be rendering `TutorialHeader` in `App.js` as a preceeding sibling of `Content`, another UI Shell component. Those components need to live one after another for the UI Shell to properly render.
+**Note:** It's important that the `TutorialHeader` returns the Carbon `Header` as its containing element, as we'll later be rendering `TutorialHeader` in `App.js` as a preceeding sibling of `Content`, another UI Shell component. Those components need to live one after another for the UI Shell to properly render.
 
 </InlineNotification>
 
