--- a/src/pages/components/link/usage.mdx
+++ b/src/pages/components/link/usage.mdx
@@ -94,7 +94,7 @@ We recommend links be three words or fewer. Because links take users to a new lo
 
 Links need to be clear enough to be understood by the user, but should not be so long that the text wraps unless used inline.
 
-For further content guidance, see Carbon's [content guidelines](/guidelines/content/action-labels).
+For further content guidance, see IBM Accessibility on [link purpose](https://www.ibm.com/able/guidelines/ci162/link_purpose.html).
 
 ## Behaviors
 
