--- a/src/pages/guidelines/accessibility/overview.mdx
+++ b/src/pages/guidelines/accessibility/overview.mdx
@@ -171,7 +171,7 @@ Functional cognitive disabilities can result in difficulties with:
 <Row className="resource-card-group">
 <Column colMd={4} colLg={4} noGutterSm>
 <ResourceCard
-    subTitle="IBM Equal Access Tools"
+    subTitle="IBM Equal Access Toolkit"
     href="https://www.ibm.com/able/toolkit"
      >
 
