--- a/src/pages/data-visualization/advanced-charts/index.mdx
+++ b/src/pages/data-visualization/advanced-charts/index.mdx
@@ -66,7 +66,7 @@ A heat map is a two-dimensional visualization in which individual values contain
 
 #### Sequential scales
 
-Sequential scales use a blended progression, typically of a single color, from the lowest contrast to the highest contrast values, representing lows to highs. It’s best practice to use a sequential scale with values that are all positive or all negative. Sequential heat maps can leverage the full range of the palette (from 10-100) to maximize contrast. Please note that the 3:1 minimum contrast requirement does not apply to heat maps.
+Sequential scales use a blended progression, typically of a single color, from the lowest contrast to the highest contrast values, representing lows to highs. It’s best practice to use a sequential scale with values that are all positive or all negative. Sequential heat maps can leverage the full range of the palette (from 10–100) to maximize contrast. Please note that the 3:1 minimum contrast requirement does not apply to heat maps.
 
 <Row>
 <Column  colLg={12} colMd={8} colSm={4} >
