image updates and docs clarifications

--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -466,7 +466,7 @@ The data table's toolbar and rows follow interaction conventions found in other 
 
 ### Hover
 
-A row's hover state can help your user visually scan the columns of data in a row. Consider leaving the hover state for your rows even if the row is not interactive.
+The data table's row hover state can help your user visually scan the columns of data in a row even if the row is not interactive.
 
 <Row>
 <Column colLg={8}>
@@ -556,7 +556,9 @@ When the overflow menu contains less than three options, keep the actions inline
 
 ### Overflow menu
 
-By default, the overflow menu icons are persistent on each row. Having the overflow menus always visible signals to the user actions can be taken on the table rows. Alternatively, the overflow menu can be set to only show on hover and focus using the `overflowMenuOnHover` prop.
+By default, the overflow menu icons are persistent on each row. Having the overflow menus always visible signals to the user actions can be taken on the table rows. Alternatively, a product team may use the `overflowMenuOnHover` prop to only show the overflow menu on hover and focus to reduce the visual clutter of an overflow menu on every row.
+
+For mobile and touch devices the data table will detect if the user agent supports hover-over and persist the overflow menus even if the `overflowMenuOnHover` prop is enabled.
 
 <Row>
 <Column colLg={8}>
